feat: main title and cursor for theme

--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <title>Calculator app</title>
+  </head>
+  <body>
+    <main>
+      <div class="main-title">
+        <div class="main-title-text">
+          <h1>calc</h1>
+          <p>theme</p>
+        </div>
+        <div class="main-theme">
+          <div class="main-theme-label">
+            <label for="radio1">1</label>
+            <label for="radio2">2</label>
+            <label for="radio3">3</label>
+          </div>
+          <div class="main-theme-input">
+            <span class="radio-control"></span>
+            <input type="radio" name="radio" id="radio1" />
+            <input type="radio" name="radio" id="radio2" />
+            <input type="radio" name="radio" id="radio3" />
+          </div>
+        </div>
+      </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Calculator app</title>
+      <input class="input-user" type="text" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </main>
+    <script src="scripts/index.js"></script>
+  </body>
 </html>
