feat: localstorage for theme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="main-theme-input">
             <span class="radio-control"></span>
-            <input type="radio" name="radio" id="radio1" />
+            <input type="radio" name="radio" id="radio1" checked="true" />
             <input type="radio" name="radio" id="radio2" />
             <input type="radio" name="radio" id="radio3" />
           </div>
