fix: theme and localstorage

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           </div>
           <div class="main-theme-input">
             <span class="radio-control"></span>
-            <input type="radio" name="radio" id="radio1" checked="true" />
-            <input type="radio" name="radio" id="radio2" />
-            <input type="radio" name="radio" id="radio3" />
+            <input type="radio" name="radio" id="radio1" class="theme-switcher" />
+            <input type="radio" name="radio" id="radio2" class="theme-switcher" />
+            <input type="radio" name="radio" id="radio3" class="theme-switcher" />
           </div>
         </div>
       </div>
