--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <input class="input-user" type="text" />
+      <input class="input-user" type="text" placeholder="0" />
 
       <div>
         <div></div>
