add: html btn calculator for dekstop

--- a/index.html
+++ b/index.html
@@ -34,12 +34,25 @@
 
       <input class="input-user" type="text" placeholder="0" />
 
-      <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="main-btn-grid">
+        <button type="button" class="main-btn" value="7">7</button>
+        <button type="button" class="main-btn" value="8">8</button>
+        <button type="button" class="main-btn" value="9">9</button>
+        <button type="button" class="main-btn" data-spe-char="del">DEL</button>
+        <button type="button" class="main-btn" value="4">4</button>
+        <button type="button" class="main-btn" value="5">5</button>
+        <button type="button" class="main-btn" value="6">6</button>
+        <button type="button" class="main-btn" data-spe-char="+">+</button>
+        <button type="button" class="main-btn" value="1">1</button>
+        <button type="button" class="main-btn" value="2">2</button>
+        <button type="button" class="main-btn" value="3">3</button>
+        <button type="button" class="main-btn" data-spe-char="-">-</button>
+        <button type="button" class="main-btn" data-spe-char=".">.</button>
+        <button type="button" class="main-btn" value="0">0</button>
+        <button type="button" class="main-btn" data-spe-char="/">/</button>
+        <button type="button" class="main-btn" data-spe-char="x">x</button>
+        <button type="button" class="main-btn btn-reset" data-spe-char="reset">RESET</button>
+        <button type="button" class="main-btn btn-result" data-spe-char="=">=</button>
       </div>
     </main>
     <script src="scripts/index.js"></script>
