--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
       <div class="calculator-grid">
         <div class="output">
-          <div data-previous-operand class="previous-operand">140</div>
-          <div data-current-operand class="current-operand">140</div>
+          <div data-previous-operand class="previous-operand"></div>
+          <div data-current-operand class="current-operand"></div>
         </div>
 
         <div class="calculator-btn">
