--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="1" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,7 @@
             <label for="radio2">2</label>
             <label for="radio3">3</label>
           </div>
-          <div class="main-theme-input">
+          <div class="main-theme-ouput">
             <span class="radio-control"></span>
             <input type="radio" name="radio" id="radio1" class="theme-switcher" />
             <input type="radio" name="radio" id="radio2" class="theme-switcher" />
