--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
       </div>
     </main>
-    <script src="scripts/index.js"></script>
+    <script src="scripts/theme.js"></script>
+    <script src="scripts/calculator.js"></script>
   </body>
 </html>
