--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label for="radio2">2</label>
             <label for="radio3">3</label>
           </div>
-          <div class="main-theme-ouput">
+          <div class="main-theme-output">
             <span class="radio-control"></span>
             <input type="radio" name="radio" id="radio1" class="theme-switcher" />
             <input type="radio" name="radio" id="radio2" class="theme-switcher" />
